# web_hw_14

./: .coverage  .gitignore  alembic.ini  main.py  pyproject.toml  readme.md  test.db
alembic/versions/: 23e3c7df2dbc_.py  9ca532377d7e_.py  a784792218da_.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_database_db.py  test_route_auth.py  test_route_auth.rar  test_route_auth_2.rar  test_route_contacts.py  test_route_users.py  test_services_auth.py  test_services_email.py  test_unit_repository_contacts.py  test_unit_repository_users.py
