[tool.poetry]
name = "web-hw-13-part-1"
version = "0.1.0"
description = ""
authors = ["alexfighterbomber <ssamsobi@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_13_part_1"}]

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^1.4.46"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
psycopg2 = "^2.9.5"
alembic = "^1.9.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
libgravatar = "^1.0.3"
fastapi-mail = "^1.2.5"
redis = "^4.5.1"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.32.0"
bcrypt = "^4.3.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
